--- a/src/app/players-list/players-list.component.html
+++ b/src/app/players-list/players-list.component.html
@@ -5,8 +5,8 @@
                 <div class="d-flex align-items-center justify-content-between">
                     <div class="d-flex align-items-center">
                         <div *ngIf="childGroupName == childGroupLeader.groupName && 
-                            user.name == childGroupLeader.name" class="p-2">
-                            <i class="fa-solid fa-star" style="color: #b3b611;"></i>
+                            user.name == childGroupLeader.name && !childGameOn" class="p-2">
+                            <i class="fa-regular fa-star"></i>
                         </div>
                         <span class="badge bg-danger d-flex justify-content-center align-items-center">
                             <div>{{i + 1}}</div>
@@ -14,7 +14,8 @@
                         <h5 class="p-2">{{user.name}}</h5>
                     </div>
                     <div *ngIf="childGroupName == childGroupLeader.groupName && 
-                        childName == childGroupLeader.name && !childGameOn" class="dropdown">
+                        childName == childGroupLeader.name && !childGameOn"
+                        class="dropdown d-flex justify-content-right">
                         <button class="btn btn-outline-secondary dropdown-toggle caret-off" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="fa-solid fa-ellipsis"></i>
                         </button>
@@ -22,27 +23,83 @@
                             <div class="dropdown-item" (click)="assignNewGroupLeader(user.name)">Assign Group Leader</div>  
                         </div>
                     </div>
+                    <div *ngIf="playerInGame && childGameOn">
+                        <div *ngIf="voteState == 'vote'">
+                            <button type="button" class="btn btn-danger" id="vote"  data-bs-toggle="modal" data-bs-target="#voteConformationModel" (click)="voteHimOrHer(user.name, false)">
+                                Vote <i class="fa-regular fa-envelope"></i>
+                            </button>
+                        </div>
+                        <div *ngIf="false">
+                            <button type="button" class="btn btn-danger" id="exile">Exile <i class="fa-solid fa-person-walking"></i></button>
+                        </div>
+                        <div *ngIf="false">
+                            <button type="button" class="btn btn-danger" id="check">Check <i class="fa-solid fa-magnifying-glass"></i></button>
+                        </div>
+                        <div *ngIf="false">
+                            <button type="button" class="btn btn-danger" id="fire">Fire <i class="fa-solid fa-fire"></i></button>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="w-100"></div>
-            <div class="col">
-                <div class="d-flex align-items-center">
-                    <span class="badge bg-primary d-flex justify-content-center align-items-center" id="inGame">
+            <div class="col-2">
+                <div *ngIf="playerInGame; then inGameBadge else outGameBadge"> </div>
+                <ng-template #inGameBadge class="d-flex align-items-center">
+                    <span class="badge bg-primary d-flex justify-content-center align-items-center">
                         <div>In Game</div>
                     </span>
+                </ng-template>
+                <ng-template #outGameBadge class="d-flex align-items-center">
+                    <span class="badge bg-danger d-flex justify-content-center align-items-center" >
+                        <div>Out Game</div>
+                    </span>
+                </ng-template>
+            </div>
+        </div>
+    </div>
+</div> 
+
+
+<div class="modal fade" id="voteConformationModel" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false" aria-labelledby="voteConformationModel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body text-center">
+                <div>
+                    Are you sure to vote <strong>{{votePersonName}}</strong>?
                 </div>
             </div>
-            
-        </div>
-        <div class="row pt-2">
-            <div class="col">
-                <button type="button" class="btn btn-primary" id="vote">Vote</button>
-                <button type="button" class="btn btn-danger" id="exile">Exile</button>
-                <button type="button" class="btn btn-warning" id="check">Check</button>
-                <button type="button" class="btn btn-info" id="fire">Fire</button>
+            <div class="modal-footer text-center d-flex justify-content-between">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No <i class="fa-solid fa-xmark"></i></button>
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="voteHimOrHer(votePersonName, true)">Conform <i class="fa-regular fa-circle-check"></i></button>
             </div>
         </div>
-        
     </div>
+</div>
+
+<button #waitOthersToVoteModel  [hidden]="true" data-bs-toggle="modal" data-bs-target="#waitOthersToVoteModel"></button>
+<div class="modal fade" id="waitOthersToVoteModel" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false" aria-labelledby="waitOthersToVoteModel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body text-center">
+                <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+                <h5> Please wait for others to finish voting ...  <i class="fa-solid fa-check-to-slot"></i> </h5>
+                <button #closeWaitOthersToVoteModel  [hidden]="true" type="button" class="btn btn-primary" data-bs-dismiss="modal"></button>
+            </div>
+        </div>
+    </div> 
+</div>
+
+<button #voteResultModel  [hidden]="true" data-bs-toggle="modal" data-bs-target="#voteResultModel"></button>
+<div class="modal fade" id="voteResultModel" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false" aria-labelledby="voteResultModel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body text-center">
+                <h5> {{voteResult}} </h5>
+                <button #closeVoteResultModel  [hidden]="true" type="button" class="btn btn-primary" data-bs-dismiss="modal"></button>
+            </div>
+        </div>
+    </div> 
 </div>
 
